# SwingSuiteScreener

./: .dockerignore  .env.example  .gitignore  AGENTS(1).md  AGENTS.md  AGGRESSIVE_V2_UPDATE_PROMPT.md  AS_Bullish_Pattern_Atlas_1D_v5.pine  AS_Command_1D_v2.pine  AS_Command_1D_v4.pine  AS_Momentum_4H_v4.pine  AS_Momentum_Overlay_v2.pine  AS_Weekly_Command_1D_v5.pine  AS_Weekly_Screener_v5.pine  AS_Weekly_Timing_1H_v5.pine  AS_Weekly_Underlying_Research_v5.pine  Ali_Swing_Suite_v2_Aggressive_Training_Manual.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SwingSuiteScreener_AGENTS.md  pyproject.toml  render.yaml  requirements.txt
config/: events.yaml  notifications.yaml  pine_parity.json  providers.yaml  schedule.yaml  storage.yaml  strategy.yaml  universe.yaml
docs/: Ali_Bullish_Participation_v3_Training_Manual.docx  Ali_Swing_Suite_Bullish_Participation_v4_Training_Manual.docx  Ali_Swing_Suite_Bullish_Weekly_Participation_v5_Training_Manual.docx  Bullish_Participation_v3_Manual.md  Bullish_Participation_v4_Build_Plan.md  Bullish_Participation_v4_Training_Manual.md  Bullish_Weekly_Participation_v5_Build_Plan.md  Bullish_Weekly_Participation_v5_Training_Manual.md
scanner/: __init__.py  calendars.py  catalyst_research.py  charts.py  clocks.py  config.py  contract_selection.py  daily_command.py  daily_prep.py  dashboard.py  data_quality.py  data_trust.py  entry_plan.py  evidence.py  grading.py  indicators.py  intraday_schedule_gate.py  long_call_research.py  market_context.py  market_regime.py  models.py  momentum.py  movement_filter.py  notifications.py  patterns.py  (+18 more)
(+62 files in other folders)
